# ml-message-classifier

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  start_batch_nlp.py
.code_quality/: mypy.ini  ruff.toml
.github/workflows/: ci.yml
conf/data_extraction/: extract.yml
conf/data_feature/: aggregate.yml  compress.yml  extract.yml  feature.yml  mit.yml  validate.yml
conf/model_inference/: inference.yml
conf/model_training/: training.yml
data/04_feature/: review_user_business_mit_sample.parquet
data/08_reporting/: feature_pipeline.html  training_pipeline.html
models/: final_model_v1.pkl
notebooks/: README.md
notebooks/1-data/: extraction.ipynb
notebooks/2-exploration/: exploration.ipynb
notebooks/3-feat_eng/: feature_eng.ipynb
notebooks/4-models/: models.ipynb
src/data/: aggregate.py  compress.py  extract.py  mit.py  validate.py
src/model/: mdt.py  training.py  validation.py
src/pipelines/feature_pipeline/: feature_pipeline.py
src/pipelines/inference_pipeline/: inference_pipeline.py
src/pipelines/training_pipeline/: training_pipeline.py
src/utils/: io_utils.py
