[project]
name = "ml-message-classifier"
version = "0.1.0"
description = "A ML project to classify user messages using NLP. Based on the Yelp Open Dataset, it processes and labels reviews to support automatic message handling. Includes data pipelines, model training, and batch inference pipeline."
authors = [
    "Juan G <jgomezja@unal.edu.co>",
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]

[project.urls]
documentation = "https://juan-gomezj4.github.io/ml-message-classifier"
repository = "https://github.com/juan-gomezj4/ml-message-classifier"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0", # Code linting and formatting
    "pytest>=8.3.5", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0", # Automated Cookiecutter template synchronization
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "ruff>=0.11.10",
    "matplotlib>=3.10.3",
    "ipywidgets>=8.1.7",
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
